--- a/app/assets/stylesheets/datatable.scss
+++ b/app/assets/stylesheets/datatable.scss
@@ -17,7 +17,7 @@
     }
 
     tr:hover {
-      background-color: #CFDBE1;
+      background-color: $app-blue-light;
       cursor: pointer;
     }
   }
