--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -85,10 +85,8 @@
         hr
           = image_tag @post.user.profile_image, class: 'img-circle mx-2 my-2'
           span.mr-2 = @post.user.full_name
-          span = link_to message_icon, '#', class: 'btn btn-sm btn-success btn-rounded btn-app mr-2', data: { target: "#modalContactForm", toggle: "modal" } unless current_user.present? && current_user.my_post?(@post)
-
-          - is_favorite_post = current_user.present? && current_user.is_favorite_post?(@post) ? 'btn-red' : ''
-          span = link_to heart_icon, '#', class: "btn btn-sm btn-success btn-rounded btn-app js-add-favorite-post #{is_favorite_post}", data: { url: set_favorite_post_post_path(@post), post_id: @post.id, user_id: current_user.id } if current_user.present?
+          = send_message_icon(current_user)
+          = favorite_post_icon(current_user)
       .messaging data-conversation-url=conversations_path(sender_id: current_user.try(:id), recipient_id: @post.user.id, format: 'json') data-current-user-id=current_user&.id data-post-id=@post.id
       .subtitle-container
         h5.subtitle Contact
