--- a/app/assets/javascripts/templates/messages.jst.ejs
+++ b/app/assets/javascripts/templates/messages.jst.ejs
@@ -34,12 +34,17 @@
 
   <form class="ui reply form" id="new_message" action="<%=data[0].conversation.url%>" accept-charset="UTF-8" method="post">
     <input name="utf8" type="hidden" value="✓">
-    <input type="hidden" name="authenticity_token" value="z4gIoo/vrNiXUb0uotFFsIQ4p6So1Nj34ocjcELVz1PI0P2BEExmbz5DW3xxCh4De+ecfSD6az1+Svr4db31kw==">
-    <div class="field">
-        <input class="form-control" placeholder="Write your message" type="text" name="message[body]" autofocus id="message_body">
-        <input value="1" type="hidden" name="message[user_id]" id="message_user_id">
-    </div>
-    <div>
+    <input type="hidden" name="authenticity_token" value=<%= csrf_token %>>
+    <div class='row'>
+      <div class='col-md-10'>
+        <div class="field">
+          <input class="form-control" placeholder="Write your message" type="text" name="message[body]" autofocus id="message_body">
+          <input value=<%= current_user_id %> type="hidden" name="message[user_id]" id="message_user_id">
+        </div>
+      </div>
+
+      <div class='col-md-2'>
         <input type="submit" name="commit" value="Send" class="btn btn-primary btn-app" data-disable-with="Send">
+      </div>
     </div>
 </form>
