--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the profile controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.outgoing-reservations-container, .incoming-reservations-container, .favorite-posts-container, .my-posts-container {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+  padding: 10px;
+  margin-top: 10px;
+  height: 300px;
+  overflow: auto;
+  margin-bottom: 20px;
+}
+.outgoing-reservation, .incoming-reservation, .favorite-posts {
+  padding: 10px;
+  margin-top: 10px
+}
