added delete reservation

--- a/app/views/profile/index.slim
+++ b/app/views/profile/index.slim
@@ -44,6 +44,7 @@
                 - else
                   = button_tag check_icon('Confirm'), class: 'js-confirm-reservation btn btn-success btn-sm mr-2'
                   = info_icon('fa-info-circle js-reservation-info', 'Make sure to contact the user. When confirmed, the user will get a notification.')
+                = button_tag trash_icon('Delete'), class: 'js-delete-reservation btn btn-danger btn-sm'
             .col-md-6
               p
                 strong From:
