--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -22,6 +22,15 @@ body {
   .nav-link {
     text-align: center;
   }
+
+  .publish-post {
+    padding: 0;
+    margin: 5px 0px 0px 8px;
+    .plus-icon {
+      font-size: 30px !important;
+    }
+  }
+
   .nav-link:hover {
     background-color: #263343;
     color: white !important;
