--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -170,6 +170,12 @@
     width: 100%;
   }
 
+  .availability-from {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   #googleMap {
     width: 100%;
     height: 300px;
@@ -236,3 +242,13 @@
 .js-refresh-filter {
   transition: all .2s ease-in-out;
 }
+
+@media only screen and (max-width: 700px) {
+  .availability-form {
+    display: block !important;
+    .form-group {
+      width: 100%;
+    }
+  }
+}
+
