--- a/app/views/posts/_availability_form.slim
+++ b/app/views/posts/_availability_form.slim
@@ -1,7 +1,7 @@
 = simple_form_for @reservation do |f|
   .row
     .col-md-12
-      .flex-center-all
+      .availability-from
         = f.input :user_id, as: :hidden, input_html: { value: current_user.id } if logged_in?
         = f.input :title, as: :hidden, input_html: { value: current_user.full_name } if logged_in?
         = f.input :post_id, as: :hidden, input_html: { value: post.id }
