--- a/app/views/user_mailer/reservation_confirmation.slim
+++ b/app/views/user_mailer/reservation_confirmation.slim
@@ -1,1 +1,3 @@
-= "You got a new reservation from #{@reservation.user.full_name} for #{@reservation.post.title}"
+= I18n.t('mailer.reservation.successfull', user_name: @reservation.user.full_name, post_title: @reservation.post.title)
+p
+  = link_to I18n.t('mailer.reservation.see_reservation'), profile_index_url
