--- a/app/views/users/registrations/new.slim
+++ b/app/views/users/registrations/new.slim
@@ -1,5 +1,6 @@
-h2 Sign up
+h2 = I18n.t('user.sign_up')
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+  = f.hidden_field :locale, value: params[:locale]
   = render "devise/shared/error_messages", resource: resource
   .field
     = f.input :first_name, autofocus: true
@@ -12,6 +13,6 @@ h2 Sign up
   .field
     = f.input :password_confirmation, autocomplete: 'off'
   .actions
-    = f.submit "Sign up", class: 'btn btn-primary btn-sm'
+    = f.submit "Sign up", class: 'btn btn-primary btn-sm btn-app'
 
 = render "users/shared/links"
