--- a/app/views/user_mailer/reservation_confirmation.slim
+++ b/app/views/user_mailer/reservation_confirmation.slim
@@ -1,3 +1,6 @@
-= I18n.t('mailer.reservation.successfull', user_name: @reservation.user.full_name, post_title: @reservation.post.title)
-p
-  = link_to I18n.t('mailer.reservation.see_reservation'), profile_index_url
+- I18n.with_locale(@receiver.locale.to_sym) do
+  - byebug
+  = I18n.t('mailer.reservation.successfull', user_name: @reservation.user.full_name, post_title: @reservation.post.title)
+  p
+    = link_to I18n.t('mailer.reservation.see_reservation'), profile_index_url
+end
