--- a/app/views/user_mailer/reservation_confirmation.text.slim
+++ b/app/views/user_mailer/reservation_confirmation.text.slim
@@ -1,2 +1,4 @@
-= I18n.t('mailer.reservation.successfull', user_name: @reservation.user.full_name, post_title: @reservation.post.title)
-= link_to I18n.t('mailer.reservation.see_reservation'), profile_index_url
+- I18n.with_locale(@receiver.locale.to_sym) do
+  = I18n.t('mailer.reservation.successfull', user_name: @reservation.user.full_name, post_title: @reservation.post.title)
+  = link_to I18n.t('mailer.reservation.see_reservation'), profile_index_url
+end
