added direct upload for posts

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -6,6 +6,7 @@
 @import 'profile';
 @import 'datatable';
 @import 'navbar';
+@import 'direct_upload';
 
 body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
