--- a/app/views/shared/uploaders/_image_uploader.slim
+++ b/app/views/shared/uploaders/_image_uploader.slim
@@ -8,7 +8,7 @@
 .js-image-uploader-container
   .js-image-uploader.image-uploader class=scope_class
     .button-wrapper.m-t
-      = form_builder.input attribute, as: :file, label: false, input_html: { multiple: multiple }
+      = form_builder.input attribute, as: :file, label: false, input_html: { multiple: multiple, data: { direct_upload_url: direct_upload_url } }
     .image-preview.js-image-preview
       .flexslider.show-flex
         ul.slides
