--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -4,7 +4,7 @@
 
 .my-reservations-container, .incoming-reservations-container, .favorite-posts-container, .my-posts-container {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-  padding: 10px;
+  // padding: 10px;
   margin-top: 10px;
   height: 600px;
   overflow: auto;
