--- a/app/views/posts/_post_list.slim
+++ b/app/views/posts/_post_list.slim
@@ -27,7 +27,7 @@ ul.list-group.shadow
             .info-tag
               span.left Model
               span.right = post.model&.titleize
-          h6.mt-0.font-weight-bold.mb-2.mt-4 = link_to 'Edit', edit_post_path(post) if edit
+          h6.mt-0.font-weight-bold.mb-2.mt-4 = link_to t('edit'), edit_post_path(post) if edit
 
         = image_tag post.cover_image, class: 'img ml-lg-5 order-1 order-lg-2 w-200'
 
