--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -32,7 +32,7 @@
 
   .my-reservation, .incoming-reservation, .favorite-posts {
     padding: 10px;
-    //margin-top: 10px
+    margin-top: 40px
   }
 
   .user-info-container {
