--- a/app/views/profile/index.slim
+++ b/app/views/profile/index.slim
@@ -17,7 +17,7 @@
 
         = link_to t('profile.edit_profile'), edit_user_registration_path
     .col-md-9
-      ul#edit-post-tab-list.nav.nav-tabs.nav-justified.md-tabs.indigo role="tablist"
+      ul#profile-tab-list.nav.nav-tabs.nav-justified.md-tabs.indigo role="tablist"
         li.nav-item
           = link_to t('profile.tabs.my_reservations'), '#my-reservations-tab', class: 'nav-link active', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'home-just' }, role: 'tab'
         li.nav-item
@@ -27,12 +27,14 @@
         li.nav-item
           = link_to t('profile.tabs.favorite_posts'), '#favorite-posts-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'contact-just' }, role: 'tab'
 
-      #edit-post-tab.tab-content.card
+      #profile-tab.tab-content.card
 
         #my-reservations-tab.tab-pane.fade.show.active aria-labelledby="home-tab-just" role="tabpanel"
          .row
           .col-md-12
             .my-reservations-container
+              - unless @my_reservations.present?
+                p.mt-4.font-italic = t('profile.no_reservations')
               - @my_reservations.each do |reservation|
                 .my-reservation
                   .status style="background: #{reservation.confirmed ? 'lightgreen' : 'lightblue' }"
@@ -52,6 +54,8 @@
          .row
           .col-md-12
             .incoming-reservations-container
+              - unless @incoming_reservations.present?
+                p.mt-4.font-italic = t('profile.no_incoming')
               - @incoming_reservations.each do |reservation|
                 .incoming-reservation data-post-id=reservation.post.id  data-user-name=reservation.user&.full_name data-post-title=reservation.post.title data-reservation-url=reservations_path data-reservation-id=reservation.id
                   .status style="background: #{reservation.confirmed ? 'lightgreen' : 'lightblue' }"
@@ -62,8 +66,8 @@
                         = link_to reservation.post.title, post_path(reservation.post), target: '_blank'
                         = info_icon('fa-info-circle ml-2 js-reservation-info', t('profile.info_confirm')) unless reservation.confirmed
                       - unless reservation.confirmed
-                        = button_tag check_icon('Confirm'), class: 'js-confirm-reservation btn btn-success btn-sm mr-2'
-                      = button_tag trash_icon('Delete'), class: 'js-delete-reservation btn btn-danger btn-sm'
+                        = button_tag check_icon, class: 'js-confirm-reservation btn btn-success btn-sm mr-2'
+                      = button_tag trash_icon, class: 'js-delete-reservation btn btn-danger btn-sm'
                     .col-md-6
                       p
                         strong = t('profile.user')
@@ -82,8 +86,8 @@
                 - if @my_posts.present?
                   = render 'posts/post_list', posts: @my_posts, edit: true
                 - else
-                  h4.mt-4 = 'You have not uploaded any posts.'
-                  = link_to 'Uplaod a post'
+                  h4.mt-4 = t('profile.no_posts')
+                  = link_to t('profile.upload_post')
         #favorite-posts-tab.tab-pane.fade aria-labelledby="contact-tab-just" role="tabpanel"
           .row
             .col-md-12
