--- a/app/views/posts/_post_list.slim
+++ b/app/views/posts/_post_list.slim
@@ -2,7 +2,7 @@
 
 .js-address-assets *{data: { car_icon: asset_path('car_icon.png')}}
 
-ul.list-group.shadow
+ul.list-group.shadow.post-list
   - posts.each do |post|
     li.list-group-item
 
@@ -10,10 +10,10 @@ ul.list-group.shadow
 
       .media.align-items-lg-center.flex-column.flex-lg-row.p-3
         .media-body.order-2.order-lg-1
-          h5.mt-0.font-weight-bold.mb-2 = link_to post.title, post
+          h5.mt-0.font-weight-bold.mb-2.post-title = link_to post.title, post
           p.font-italic.text-muted.mb-0.small = post.description
           .d-flex.align-items-center.justify-content-between.mt-1
-            h6.font-weight-bold.my-2 = "#{post.price} KM"
+            h6.font-weight-bold.my-2.post-price = "#{post.price} KM"
           .d-flex.align-items-center.justify-content-between.mt-1 style='flex-wrap: wrap;'
             .info-tag
               span.left = t('search.fuel')
